--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,11 @@ browser_artifacts/
 *.pcap
 *.jsonl
 *.log
+
+# artifacts (do not commit)
+proxy_artifacts/
+browser_artifacts/
+*.har
+*.pcap
+*.jsonl
+*.log
